# ds-Alerts

./: Dockerfile  Investigation.md  README.md  docker-compose.yml  environment.yml  pyproject.toml
data/: Congo virus - Pakistan - Data.csv  Diarrhea+Vomit test.csv  Education_Argentina.csv  Sintomas_intestinales_uruguay.csv  Sintomas_intestinales_uruguay_gender_sentiment.csv  diarrhea_vomit_data_gender_sentiment.csv
ds-alerts/: test.py
notebooks/: ab-demo-alerts.ipynb  ab-explore-ts.ipynb  ab-extract-narratives.ipynb  ab-langchain-summaries.ipynb  ab-trends-for-narratives.ipynb  ab-variants-anomaly-ts.ipynb  congo.ipynb  diarrhea_vomit.ipynb  dict_marc.json  dict_marc.pickle  education_argentina.ipynb  group_anomalies.ipynb  immigration.ipynb  inmigration.ipynb  marc_congo.json  output.txt  sintomas_intestinales_uruguay.ipynb  wbq-data-segmentation.ipynb  wbq-group_anomalies.ipynb
notebooks/diarrhea_vomit/: wbq-data-segmentation.ipynb  wbq-group_anomalies.ipynb
notebooks/mental-health/: sri-lanka.ipynb
notebooks/sintomas_instestinals_uruguay/: wbq-data-segmentation-maximazer.ipynb  wbq-data-segmentation.ipynb  wbq-group_anomalies.ipynb
notebooks/wandb/: latest-run
notebooks/wandb/run-20230811_172758-1d6smzwo/: run-1d6smzwo.wandb
reports/: Time-Series-Transformation.html  Time-Series-Transformation.md
src/: anomaly.py  preprocess.py  summarize.py  time_series.py
src/alerts/: anomaly.py  dataclasses.py  maximazer.py  plot.py  preprocess.py  time_series.py  utils.py
src/ds_alerts/: anomaly.py  time_series.py
tests/: test_anomalies.py
(+36 files in other folders)
