[tool.poetry]
name = "ds-alerts"
version = "0.0.0"
description = ""
authors = ["Alejandro Bonell <abonell@citibeats.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
numpy = ""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
