[tool.poetry]
name = "alerts"
version = "0.0.0"
description = ""
authors = ["Alejandro Bonell <abonell@citibeats.com>"]
readme = "README.md"
packages = [{include = "alerts", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^1.2.3"
numpy = "^1.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
