[tool.poetry]
name = "alerts"
version = "0.0.0"
description = ""
authors = ["Alejandro Bonell <abonell@citibeats.com>"]
readme = "README.md"
packages = [{include = "alerts", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^1.2.3"
numpy = "^1.25.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
openai = "0.25.0"
tiktoken = "0.5.2"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
